Opened 8 years ago

Closed 6 years ago

#7113 closed defect (fixed)

NO_DATA is discarded from the AMR stream

Reported by: blikjeham Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: amrwb
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

NO_DATA is discarded from the AMR streams, resulting in no silence between audio segments.

How to reproduce:

% ffmpeg -y -f amr -i input.awb output.au
ffmpeg version 2.2.1 Copyright (c) 2000-2014 the FFmpeg developers
  built on Jun 17 2014 01:25:46 with gcc 4.8.2 (GCC) 20140120 (Red Hat 4.8.2-16)
  configuration: --prefix=/usr --libdir=/usr/lib64 --shlibdir=/usr/lib64 --mandir=/usr/share/man --enable-shared --enable-runtime-cpudetect --enable-gpl --enable-version3 --enable-postproc --enable-avfilter --enable-pthreads --enable-x11grab --enable-vdpau --disable-avisynth --enable-frei0r --enable-libdc1394 --enable-libgsm --enable-libmp3lame --enable-libnut --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-librtmp --enable-libspeex --enable-libtheora --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-libxvid --extra-cflags='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector-strong --param=ssp-buffer-size=4 -grecord-gcc-switches -m64 -mtune=generic -fPIC' --disable-stripping
  libavutil      52. 66.100 / 52. 66.100
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 33.100 / 55. 33.100
  libavdevice    55. 10.100 / 55. 10.100
  libavfilter     4.  2.100 /  4.  2.100
  libswscale      2.  5.102 /  2.  5.102
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
[amr @ 0x1e8a9c0] Estimating duration from bitrate, this may be inaccurate
Input #0, amr, from 'input.awb':
  Duration: 00:01:03.75, bitrate: 7 kb/s
    Stream #0:0: Audio: amr_wb (sawb / 0x62776173), 16000 Hz, mono, flt, 7 kb/s
Output #0, au, to 'output.au':
  Metadata:
    encoder         : Lavf55.33.100
    Stream #0:0: Audio: pcm_s16be ([3][0][0][0] / 0x0003), 16000 Hz, mono, s16, 256 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (amrwb -> pcm_s16be)
Press [q] to stop, [?] for help
[amrwb @ 0x1e93720] Invalid mode 15
Error while decoding stream #0:0: Invalid data found when processing input

Attachments (2)

ffmpeg-silence.awb (10.5 KB ) - added by blikjeham 8 years ago.
AMR WB file with silence.
ffmpeg-silence.flac (67.8 KB ) - added by Carl Eugen Hoyos 8 years ago.

Download all attachments as: .zip

Change History (9)

comment:1 by Carl Eugen Hoyos, 8 years ago

Keywords: amrnb added; amr NO_DATA removed
Resolution: needs_more_info
Status: newclosed

Please reopen this ticket if you can provide a sample.

by blikjeham, 8 years ago

Attachment: ffmpeg-silence.awb added

AMR WB file with silence.

comment:2 by blikjeham, 8 years ago

Keywords: amrwb added
Resolution: needs_more_info
Status: closedreopened

I have added a sample of AMR WB with silence in it.

comment:3 by Carl Eugen Hoyos, 8 years ago

Keywords: amrnb removed
Version: unspecifiedgit-master

Can you also provide a file that provides the expected output?

in reply to:  3 comment:4 by blikjeham, 8 years ago

Replying to cehoyos:

Can you also provide a file that provides the expected output?

The expected output is hard to obtain, because I do not know of a way to produce the correct output from the AMR WB file. This is a bit of a catch 22; you need a file of expected output to produce a fix, but I need FFMEG to create a file with expected output.

comment:5 by Carl Eugen Hoyos, 8 years ago

If all decoders that support AMR-WB create the same output as FFmpeg, maybe there is no bug or missing feature that can be implemented?

by Carl Eugen Hoyos, 8 years ago

Attachment: ffmpeg-silence.flac added

comment:6 by Carl Eugen Hoyos, 8 years ago

Expected output attached.

comment:7 by Carl Eugen Hoyos, 6 years ago

Reproduced by developer: set
Resolution: fixed
Status: reopenedclosed

The sample sounds significantly more similar to the refrerence output since e426f71c96e9fac3ff87f51cfe7df603220fbd5d
The decoder still does not output comfort noise though (but silence).

Note: See TracTickets for help on using tickets.